# StereoPipeline

./: .gitignore  configure.ac
src/asp/: Makefile.am
src/asp/MultiviewTK/: AlbedoOptimizerGaussian.h  AlbedoOptimizers.h  GeometryOptimizer.h  Makefile.am  MatrixImageMath.h  PatchMultiView.h  RefMultiView.h  gen_synth_scene.cc  gen_synth_scene.h  multiview.cc  multiview.h
src/asp/MultiviewTK/MatlabPrototype/GeoOpt/: mpgeoGaus.m  mpgeoGausP4.m  mporthoproj.m  mvcPatch.m  mvcPatchZ.m  mvread.m
src/asp/MultiviewTK/tests/: Makefile.am  TestAlbedoOptimizerGaussian.cxx  TestAlbedoOptimizers.cxx  TestPatchMultiView.cxx
